fixed the overlapping :0

--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,6 @@
   transform: translateY(-50%);
   width: 700px;
   height: 725px;
-  min-height: 725px;
   max-height: 725px;
   padding: 10px;
   border-style: solid;
